tui/tests/snapshots/view_snapshots__conversation_focus_dark_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&rail, Theme::Dark, 100, 24)"
---
  GARIVE  research-age  /  Session session-0000                               ● online  ·  running

 Sessions 12               │ Conversation · ● live
                           │  ╭─ YOU #2
 ▌ research-age · 000000   │  │  Summarize the release plan.
   ● running  ·  1 turn    │  ╰─
                           │
   research-age · 000001   │    ✓  Agent action · completed
   ● running  ·  1 turn    │
                           │  ◆  GARIVE #6
   research-age · 000002   │     ## Release plan
   ● running  ·  1 turn    │     • Verify the Runtime
                           │     • Ship with evidence
   research-age · 000003   │     cargo test passes.
   ● running  ·  1 turn    │
                           │
   research-age · 000004   │
   ● running  ·  1 turn    │
                           │
   research-age · 000005   │────────────────────────────────────────────────────────────────────────
   ● running  ·  1 turn    │╭ Compose ─────────────────────────────────────────────────────────────╮
                           ││ Ask a follow-up…                                                     │
  Ctrl+N new · Ctrl+S list │╰──────────────────────────────────────────────────────────────────────╯
                           │  Esc cancel   PgUp/PgDn scroll   End latest                18 / 4096 B
