tui/tests/snapshots/view_snapshots__conversation_rail_dark_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: "frame(&rail, Theme::Dark, 100, 24)"
---
  GARIVE  research-age  /  Session session-alph                               ● online  ·  running

 Sessions 2                │ Conversation · 3 newer updates
                           │  ╭─ YOU #7                                                           ┊
 ▌ research-age · 123456   │  │  Position rail evidence cell 6.                                   ┊
   ✓ completed  ·  3 turns │  ╰─                                                                  ┊
                           │                                                                      ┊
   research-age · 987654   │  ◆  GARIVE #8                                                        ┊
   ● running  ·  1 turn    │     Position rail evidence cell 7.                                   ┃
                           │                                                                      ┃
                           │  ╭─ YOU #9                                                           ┃
                           │  │  Position rail evidence cell 8.                                   ┃
                           │  ╰─                                                                  ┊
                           │                                                                      ┊
                           │  ◆  GARIVE #10                                                       ┊
                           │     Position rail evidence cell 9.                                   ┊
                           │                                                                      ┊
                           │  ╭─ YOU #11                                                          ┊
                           │  │  Position rail evidence cell 10.                                  ┊
                           │────────────────────────────────────────────────────────────────────────
                           │╭ Compose ─────────────────────────────────────────────────────────────╮
                           ││ Ask a follow-up…                                                     │
  Ctrl+N new · Ctrl+S list │╰──────────────────────────────────────────────────────────────────────╯
                           │  Esc cancel   PgUp/PgDn scroll   End latest                18 / 4096 B
