tui/tests/snapshots/view_snapshots__detached_follow_cue_matrix.snap
---
source: tui/tests/view_snapshots.rs
expression: matrix
---
===== compact mono 40x8 =====
↓ 12 newer updates ·  End follow latest
  › Summarize the release plan.
    ✓ Agent action · completed
  ◆ Garive
    ## Release plan

Agent running ·  Esc cancel Turn
› Ask a follow-up…
===== standard dark 100x24 =====
  Session 1  ·  Agent
                              ↓ 12 newer updates ·  End follow latest

    › Summarize the release plan.
      ✓  Agent action · completed
    ◆ Garive
      ## Release plan

      • Verify the Runtime
      • Ship with evidence

      cargo test passes.









  Agent running ·  Esc cancel Turn
  › Ask a follow-up…

===== wide light 160x28 =====
                                Session 1  ·  Agent
                                                            ↓ 12 newer updates ·  End follow latest

                                  › Summarize the release plan.
                                    ✓  Agent action · completed
                                  ◆ Garive
                                    ## Release plan

                                    • Verify the Runtime
                                    • Ship with evidence

                                    cargo test passes.













                                Agent running ·  Esc cancel Turn
                                › Ask a follow-up…

===== overlay owns input =====
  Session 1  ·  Agent
                                         ↓ 12 newer updates

    › Summarize the release plan.
              ╭ Keyboard guide ──────────────────────────────────────────────────────╮
              │                                                                      │
              │    Enter send   Ctrl+J new line   Ctrl+N new Session                 │
              │    Ctrl+S open Sessions   Ctrl+P open commands                       │
              │    Ctrl+R open prompt history   Ctrl+G edit externally               │
              │    Ctrl+U/K kill to line edge   Ctrl+Y yank killed text              │
              │    Esc close guide   Ctrl+Q ask to quit                              │
              │                                                                      │
              │  Durable truth comes from the local Garive Host.                     │
              │  No function keys are required. Color and mouse are optional.        │
              │  Copy uses terminal OSC 52 support; otherwise select terminal text   │
              │  manually.                                                           │
              │                                                                      │
              ╰──────────────────────────────────────────────────────────────────────╯



  Agent running
  › Ask a follow-up…
