tui/tests/snapshots/view_snapshots__frozen_composer_theme_width_matrix.snap
---
source: tui/tests/view_snapshots.rs
expression: frozen_composer_matrix()
---
theme=Dark width=40 marker=Style::new().yellow().bg(Color::Reset).underline_color(Color::Reset) cursor=None
Session 1
  ◆ Garive
    ## Release plan

    • Verify the Runtime
    • Ship with evidence

    cargo test passes.

 ! Draft locked · read only
› Retained pending draft
 ● Waiting for durable command truth…

theme=Dark width=100 marker=Style::new().yellow().bg(Color::Reset).underline_color(Color::Reset) cursor=None
  Session 1  ·  Agent
    ◆ Garive
      ## Release plan

      • Verify the Runtime
      • Ship with evidence

      cargo test passes.

   ! Draft locked · read only
  › Retained pending draft
   ● Waiting for durable command truth…

theme=Light width=40 marker=Style::new().yellow().bg(Color::Reset).underline_color(Color::Reset) cursor=None
Session 1
  ◆ Garive
    ## Release plan

    • Verify the Runtime
    • Ship with evidence

    cargo test passes.

 ! Draft locked · read only
› Retained pending draft
 ● Waiting for durable command truth…

theme=Light width=100 marker=Style::new().yellow().bg(Color::Reset).underline_color(Color::Reset) cursor=None
  Session 1  ·  Agent
    ◆ Garive
      ## Release plan

      • Verify the Runtime
      • Ship with evidence

      cargo test passes.

   ! Draft locked · read only
  › Retained pending draft
   ● Waiting for durable command truth…

theme=Mono width=40 marker=Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset) cursor=None
Session 1
  ◆ Garive
    ## Release plan

    • Verify the Runtime
    • Ship with evidence

    cargo test passes.

 ! Draft locked · read only
› Retained pending draft
 ● Waiting for durable command truth…

theme=Mono width=100 marker=Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset) cursor=None
  Session 1  ·  Agent
    ◆ Garive
      ## Release plan

      • Verify the Runtime
      • Ship with evidence

      cargo test passes.

   ! Draft locked · read only
  › Retained pending draft
   ● Waiting for durable command truth…
