tui/tests/snapshots/view_snapshots__h4_full_workbench_dark_100x24.snap
---
source: tui/tests/view_snapshots.rs
expression: filmstrip
---
===== preparing =====

  › Show every verified streaming stage.
  • Preparing context


















 Esc interrupt
› A retained follow-up draft


===== first presented delta =====

  › Show every verified streaming stage.
  • Preparing context
    The first visible▍

















 Esc interrupt
› A retained follow-up draft


===== second delta with activity =====

  › Show every verified streaming stage.
    ●  Verifying streamed output
  • Writing…
    The first visible streaming frame arrives.▍
















 Esc interrupt
› A retained follow-up draft


===== overlay while streaming =====
             ╭ Command palette ───────────────────────────────────────────────────────╮
             │  Search  type to search                                                │
             │  21 commands · showing 1–15 · ↓ 6 more                                 │
             │  › /new                unavailable · no Agent is installed             │
             │    /sessions           Switch session                                  │
             │    /jump               unavailable · fewer than two Turns are loaded   │
             │    /inspect            Open Inspector                                  │
             │    /status             Connection details                              │
             │    /edit-prompt        Edit draft externally                           │
             │    /retry              unavailable · no unknown command                │
             │    /reconnect          Resume event stream                             │
             │    /cancel             Cancel running turn                             │
             │    /theme system       Follow terminal theme                           │
             │    /theme dark         Use dark theme                                  │
             │    /theme light        Use light theme                                 │
             │    /theme mono         Use mono theme                                  │
             │    /mouse auto         Keep terminal selection and scrolling           │
             │    /mouse on           Enable mouse capture now                        │
             │                                                                        │
             │    ↑/↓ select   Home/End edge   Enter run   Esc close                  │
             ╰────────────────────────────────────────────────────────────────────────╯

› A retained follow-up draft


===== stream restored after overlay =====

  › Show every verified streaming stage.
    ●  Verifying streamed output
  • Writing…
    The first visible streaming frame arrives.▍
















 Esc interrupt
› A retained follow-up draft


===== finalizing =====

  › Show every verified streaming stage.
    ●  Verifying streamed output
  • Finishing…
    The first visible streaming frame arrives.▍
















 Esc interrupt
› A retained follow-up draft


===== ended awaiting durable =====

  › Show every verified streaming stage.
    ●  Verifying streamed output
  • Waiting for durable result
    The first visible streaming frame arrives.
















 Esc interrupt
› A retained follow-up draft


===== durable takeover =====

  › Show every verified streaming stage.
    ●  Verifying streamed output
  • Saved streaming answer.


















› A retained follow-up draft
