tui/tests/snapshots/view_snapshots__h4_full_workbench_dark_40x18.snap
---
source: tui/tests/view_snapshots.rs
expression: compact
---
===== preparing =====
Current session

  › Show every verified streaming
    stage.
  ◆ Garive · Preparing context










 Esc cancel Turn
› A retained follow-up draft


===== first presented delta =====
Current session

  › Show every verified streaming
    stage.
  ◆ Garive · Preparing context
    The first visible▍









 Esc cancel Turn
› A retained follow-up draft


===== second delta with activity =====
Current session

  › Show every verified streaming
    stage.
    ● Verifying streamed output
  ◆ Garive · Generating response
    The first visible streaming frame
    arrives.▍







 Esc cancel Turn
› A retained follow-up draft


===== overlay while streaming =====
╭ Command palette ─────────────────────╮
│  Search  type to search              │
│  Showing 1–12 / 21 · ↓9              │
│  › /new              unavailable ·…  │
│    /sessions         Switch session  │
│    /jump             unavailable ·…  │
│    /inspect          Open Inspector  │
│    /status           Connection de…  │
│    /edit-prompt      Edit draft ex…  │
│    /retry            unavailable ·…  │
│    /reconnect        Resume event …  │
│    /cancel           Cancel runnin…  │
│    /theme system     Follow termin…  │
│    /theme dark       Use dark theme  │
│    /theme light      Use light the…  │
│    ↑/↓ select   Home/End edge        │
│    Enter run   Esc close             │
╰──────────────────────────────────────╯

===== stream restored after overlay =====
Current session

  › Show every verified streaming
    stage.
    ● Verifying streamed output
  ◆ Garive · Generating response
    The first visible streaming frame
    arrives.▍







 Esc cancel Turn
› A retained follow-up draft


===== finalizing =====
Current session

  › Show every verified streaming
    stage.
    ● Verifying streamed output
  ◆ Garive · Finalizing response
    The first visible streaming frame
    arrives.▍







 Esc cancel Turn
› A retained follow-up draft


===== ended awaiting durable =====
Current session

  › Show every verified streaming
    stage.
    ● Verifying streamed output
  ◆ Garive · Awaiting saved result
    The first visible streaming frame
    arrives.







 Esc cancel Turn
› A retained follow-up draft


===== durable takeover =====
Current session

  › Show every verified streaming
    stage.
    ● Verifying streamed output
  ◆ Garive
    Saved streaming answer.









› A retained follow-up draft
